--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,72 @@
-/* You can add global styles to this file, and also import other style files */
+@use "variables" as *;
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  padding: 0;
+  color: $text-color;
+  background-color: $background-color;
+  font-family: "Courier New", Courier, monospace;
+}
+
+h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: $heading-color;
+}
+
+button {
+  background-color: $background-color;
+  outline: 2px solid $text-color;
+  border: none;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem 1rem;
+  font-size: 1.1em;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  color: $text-color;
+  &:hover {
+    background-color: lighten($background-color, 10);
+  }
+}
+
+input {
+  background-color: $background-color;
+  border-radius: 5px;
+  width: calc(100% - 2rem);
+  color: $text-color;
+  border: 1px solid $text-color;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem 1rem;
+  font-size: 1rem;
+}
+input:focus-visible {
+  outline-offset: -2px;
+  outline: 2px solid darken($primary-color, 10);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: $tab-background;
+  color: $text-color;
+  margin-top: 0.5rem;
+}
+
+th,
+td {
+  padding: 12px;
+  text-align: left;
+}
+
+th {
+  background-color: $table-background-darker;
+}
+
+tr:nth-child(even) td {
+  background-color: $table-background-lighter;
+}
