--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -55,6 +55,7 @@ table {
   background-color: $tab-background;
   color: $text-color;
   margin-top: 0.5rem;
+  overflow: scroll;
 }
 
 th,
@@ -69,4 +70,27 @@ th {
 
 tr:nth-child(even) td {
   background-color: $table-background-lighter;
+}
+
+.spinner {
+  width: 30px;
+  height: 30px;
+  margin: 16px auto;
+  border: 4px solid $background-color;
+  border-top: 4px solid $primary-color;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.text-error {
+  color: $text-color-error;
 }
